--- a/lordMap.backend/war/WEB-INF/web.xml
+++ b/lordMap.backend/war/WEB-INF/web.xml
@@ -20,4 +20,20 @@ http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd" version="2.5">
         <servlet-name>register</servlet-name>
         <url-pattern>/register</url-pattern>
     </servlet-mapping>
+    <servlet>
+        <servlet-name>showland</servlet-name>
+        <servlet-class>com.lordMap.servlets.ShowLandServlet</servlet-class>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>showland</servlet-name>
+        <url-pattern>/showland</url-pattern>
+    </servlet-mapping>
+    <servlet>
+        <servlet-name>getsurrounding</servlet-name>
+        <servlet-class>com.lordMap.servlets.GetSurroundingServlet</servlet-class>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>getsurrounding</servlet-name>
+        <url-pattern>/getsurrounding</url-pattern>
+    </servlet-mapping>
 </web-app>
