--- a/lordMap.backend/war/WEB-INF/web.xml
+++ b/lordMap.backend/war/WEB-INF/web.xml
@@ -60,5 +60,13 @@ http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd" version="2.5">
         <servlet-name>confirmfriend</servlet-name>
         <url-pattern>/confirmfriend</url-pattern>
     </servlet-mapping>
+    <servlet>
+        <servlet-name>showrequests</servlet-name>
+        <servlet-class>com.lordMap.servlets.ShowRequestServlet</servlet-class>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>showrequests</servlet-name>
+        <url-pattern>/showrequests</url-pattern>
+    </servlet-mapping>
     
 </web-app>
