--- a/lordMap.backend/war/WEB-INF/web.xml
+++ b/lordMap.backend/war/WEB-INF/web.xml
@@ -69,4 +69,13 @@ http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd" version="2.5">
         <url-pattern>/showrequests</url-pattern>
     </servlet-mapping>
     
+    <servlet>
+        <servlet-name>getinventory</servlet-name>
+        <servlet-class>com.lordMap.servlets.GetInventoryServlet</servlet-class>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>getinventory</servlet-name>
+        <url-pattern>/getinventory</url-pattern>
+    </servlet-mapping>
+    
 </web-app>
