--- a/lordMap.backend/war/WEB-INF/web.xml
+++ b/lordMap.backend/war/WEB-INF/web.xml
@@ -95,5 +95,13 @@ http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd" version="2.5">
         <servlet-name>getuserinfo</servlet-name>
         <url-pattern>/getuserinfo</url-pattern>
     </servlet-mapping>
+    <servlet>
+        <servlet-name>attack</servlet-name>
+        <servlet-class>com.lordMap.servlets.AttackServlet</servlet-class>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>attack</servlet-name>
+        <url-pattern>/attack</url-pattern>
+    </servlet-mapping>
     
 </web-app>
